# anon

./: LICENSE  README.md  SECURITY.md
client/: bun.lockb  package.json  tailwind.config.ts
client/src/app/: layout.tsx  page.tsx
client/src/app/[username]/: page.tsx
client/src/app/home/: PostItem.tsx  page.tsx
client/src/app/profile-setup/: page.tsx
client/src/app/referral/[code]/: page.tsx
client/src/components/: GuestRoute.tsx  ReferralCard.tsx
client/src/components/layouts/: PageLayout.tsx
client/src/components/ui/: ProtectedRoute.tsx  avatar.tsx  user-tags.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: use-toast.ts
server/: .env.example  .gitignore  Dockerfile  alembic.ini  anon  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 75722b3c51ce_change_avatar_seed_to_str.py  8f387d571778_initial_migration_with_user_post_and_.py  d97eedcac203_add_referral_system_tables_and_user_.py  e57ceccfadde_add_vote_table_for_upvote_downvote_.py  ed28863eeac1_add_avatar_seed_field_to_uesr_table.py
server/src/: db.py  main.py
server/src/emails/: verification.html
server/src/models/: post.py  referral.py  tag.py  user.py  vote.py
server/src/routes/: auth.py  posts.py  referral.py  test.py  users.py  votes.py
server/src/services/: auth.py  email.py  referral.py  tags.py
