[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "cryptography>=44.0.2",
    "fastapi>=0.115.6",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "cryptography>=42.0.0",
    "google-auth-oauthlib>=1.0.0",
    "alembic>=1.13.0",
]
